@@ -3,6 +3,9 @@
    - markus@cvs.openbsd.org 2001/04/23 21:57:07
      [ssh-keygen.1 ssh-keygen.c]
      allow public key for -e, too
+   - markus@cvs.openbsd.org 2001/04/23 22:14:13
+     [ssh-keygen.c]
+     remove debug
 
 20010424
  - OpenBSD CVS Sync
@@ -5242,4 +5245,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1166 2001/04/24 16:56:58 mouring Exp $
+$Id: ChangeLog,v 1.1167 2001/04/24 16:59:28 mouring Exp $
